[package]
name = "crate-mirror"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "fs", "net", "sync"] }
tokio-stream = "0.1"
futures = "0.3"
reqwest = { version = "0.11", features = ["rustls-tls"] }
crates-index = "0.18"
sha2 = "0.10"
bytes = "1.1"
clap = { version = "3.0", features = ["derive"] }
thiserror = "1.0"
